# src/modules/task/task.controller.ts
@@ -17,6 +17,7 @@ import {
   ApiOperation,
   ApiNotFoundResponse,
   ApiTags,
+  ApiBearerAuth,
 } from '@nestjs/swagger';
 import { TaskService } from './task.service';
 import { CreateTaskDto } from './Dto/create-task.dto';
@@ -24,13 +25,17 @@ import { UpdateStatusDto } from './Dto/update-status.dto';
 import { ListTasksQueryDto } from './Dto/list-tasks.query';
 import { Task } from './task.entity';
 import { UpdateTaskDto } from './Dto/update-task.dto';
+import { Roles } from '../auth/decorators/roles.decorator';
+import { UserRole } from '../user/user.entity';
 
 @ApiTags('tasks')
+@ApiBearerAuth('JWT-auth')
 @Controller('tasks')
 export class TaskController {
   constructor(private readonly service: TaskService) {}
 
   @Post()
+  @Roles(UserRole.MEMBER, UserRole.ADMIN)
   @ApiOperation({ summary: 'Create task (attach to project)' })
   @ApiCreatedResponse({ type: Task })
   create(@Body() dto: CreateTaskDto) {
@@ -38,6 +43,7 @@ export class TaskController {
   }
 
   @Get()
+  @Roles(UserRole.GUEST, UserRole.MEMBER, UserRole.ADMIN)
   @ApiOperation({ summary: 'List tasks (pagination + optional projectId)' })
   @ApiOkResponse()
   list(@Query() q: ListTasksQueryDto) {
@@ -45,6 +51,7 @@ export class TaskController {
   }
 
   @Patch(':id/status')
+  @Roles(UserRole.MEMBER, UserRole.ADMIN)
   @ApiOperation({ summary: 'Update task status' })
   @ApiOkResponse({ type: Task })
   setStatus(@Param('id') id: string, @Body() dto: UpdateStatusDto) {
@@ -52,6 +59,7 @@ export class TaskController {
   }
 
   @Get(':id')
+  @Roles(UserRole.GUEST, UserRole.MEMBER, UserRole.ADMIN)
   @ApiOperation({ summary: 'Get task by id' })
   @ApiOkResponse({ type: Task })
   @ApiNotFoundResponse()
@@ -60,6 +68,7 @@ export class TaskController {
   }
 
   @Delete(':id')
+  @Roles(UserRole.ADMIN)
   @ApiOperation({ summary: 'Delete task' })
   @HttpCode(HttpStatus.NO_CONTENT)
   @ApiNotFoundResponse()
@@ -69,6 +78,7 @@ export class TaskController {
 
   // NEW: update multiple fields (title/status/projectId)
   @Patch(':id')
+  @Roles(UserRole.MEMBER, UserRole.ADMIN)
   @ApiOperation({ summary: 'Update task (title / status / projectId)' })
   @ApiOkResponse({ type: Task })
   update(@Param('id') id: string, @Body() dto: UpdateTaskDto) {
