# src/modules/user/dto/update-role.dto.ts
@@ -1,0 +1,10 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsEnum } from 'class-validator';
+import { UserRole } from '../user.entity';
+
+export class UpdateRoleDto {
+  @ApiProperty({ enum: UserRole, example: UserRole.MEMBER })
+  @IsEnum(UserRole)
+  role!: UserRole;
+}
+
